# steal-brainrot-script-helper

./: .version  CMakeLists.txt  README.md
include/: roblox_script_stealer.h  utils.h
src/: main.cpp  roblox_script_stealer.cpp  utils.cpp
steal-brainrot-script-helper/: analyzer.py  main.py  renderer.py  scraper.py
steal-brainrot-script-helper/tests/: test_steal.py
tests/: test_stealer.cpp
